--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.17",
+    "@reduxjs/toolkit": "^1.6.2",
     "graphql": "^16.0.1",
     "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-router-dom": "^6.0.2"
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.0.2",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "eslint": "7",
